# workspace-monitor

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
.windsurf/skills/workspace-monitor-dev/: SKILL.md
.windsurf/skills/workspace-monitor-dev/references/: architecture.md  code-patterns.md  database-schema.md  ide-integration.md
docs/: IDE_INTEGRATION_ANALYSIS.md
opencode-plugin/: README.md  workspace-monitor.ts
src/workspace_monitor/: __init__.py  __main__.py  cli.py  core.py
src/workspace_monitor/hooks/: __init__.py  processor.py
src/workspace_monitor/web/: __init__.py  server.py
tests/: __init__.py  test_core.py
