[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV dependency groups for fast Python package management
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project]
name = "workspace-monitor"
version = "1.0.0"
description = "System-wide dashboard for monitoring git repositories with Windsurf IDE integration"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Gaurav Ahuja", email = "your.email@example.com"}
]
keywords = [
    "windsurf",
    "cascade",
    "git",
    "dashboard",
    "workspace",
    "monitoring",
    "projects"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
wsd = "workspace_monitor.cli:main"
workspace-monitor = "workspace_monitor.cli:main"
workspace-dashboard = "workspace_monitor.cli:main"

[project.urls]
Homepage = "https://github.com/gauravahujame/workspace-monitor"
Repository = "https://github.com/gauravahujame/workspace-monitor"
Issues = "https://github.com/gauravahujame/workspace-monitor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/workspace_monitor"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
